--- a/public/client/styles/pages/product/product.css
+++ b/public/client/styles/pages/product/product.css
@@ -40,16 +40,20 @@
   color: var(--light-gray-color);
 }
 .product__filter .product__filter-sale label,
-.product__filter .product__filter-freeship label {
+.product__filter .product__filter-freeship label,
+.product__filter .product__filter-featured label {
+  color: var(--dark-gray-color);
   cursor: pointer;
   transition: 0.4s ease-out;
 }
 .product__filter .product__filter-sale label.active,
-.product__filter .product__filter-freeship label.active {
+.product__filter .product__filter-freeship label.active,
+.product__filter .product__filter-featured label.active {
   color: var(--primary-color);
 }
 .product__filter .product__filter-sale label:hover,
-.product__filter .product__filter-freeship label:hover {
+.product__filter .product__filter-freeship label:hover,
+.product__filter .product__filter-featured label:hover {
   color: var(--primary-color);
 }
 .product__filter .product__filter-delete .product__filter-close {
