--- a/public/client/styles/pages/product/product.responsive.css
+++ b/public/client/styles/pages/product/product.responsive.css
@@ -41,6 +41,7 @@
   .product__filter.show {
     width: 100%;
     height: 100vh;
+    overflow-y: scroll;
     position: fixed;
     top: 0;
     left: 0%;
