--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -162,31 +162,17 @@
                 <span class="product__search-keyword"><b><%= keyword %></b></span>
               </h4>
               <% } %>
-              <ul class="filter__remove-list d-flex gap-1 flex-wrap ps-0">
-                <li class="filter__remove-item p-2" category>
-                  <span class="content-font filter__remove-title">Tìm kiếm</span>
+              <ul class="filter__remove-list d-flex gap-1 flex-wrap p-0 m-0">
+                <% removeFilterArr.forEach((filterItem) => {%>
+                <li
+                  class="filter__remove-item p-2 <% if(!filterItem.query) { %>d-none<% } %>"
+                  title="<%= filterItem.title %>"
+                  keyword="<%= filterItem.keyword %>"
+                >
+                  <span class="content-font filter__remove-title"><%= filterItem.title %></span>
                   <i class="bi bi-x-lg"></i>
                 </li>
-                <li class="filter__remove-item p-2" category>
-                  <span class="content-font filter__remove-title">Danh mục</span>
-                  <i class="bi bi-x-lg"></i>
-                </li>
-                <li class="filter__remove-item p-2" price>
-                  <span class="content-font filter__remove-title">Mức giá</span>
-                  <i class="bi bi-x-lg"></i>
-                </li>
-                <li class="filter__remove-item p-2" price>
-                  <span class="content-font filter__remove-title">Miễn phí vận chuyển</span>
-                  <i class="bi bi-x-lg"></i>
-                </li>
-                <li class="filter__remove-item p-2" price>
-                  <span class="content-font filter__remove-title">Đang giảm giá</span>
-                  <i class="bi bi-x-lg"></i>
-                </li>
-                <li class="filter__remove-item p-2" price>
-                  <span class="content-font filter__remove-title">Đang nổi bật</span>
-                  <i class="bi bi-x-lg"></i>
-                </li>
+                <% }) %>
               </ul>
             </div>
             <!-- End filter close -->
@@ -300,6 +286,7 @@
     <script src="/client/scripts/product/filterByShippingFee.js"></script>
     <script src="/client/scripts/product/filterByFeaturedProduct.js"></script>
     <script src="/client/scripts/product/filterByCategory.js"></script>
+    <script src="/client/scripts/product/removeProductFilter.js"></script>
     <!-- End Scripts File -->
 
     <!-- Scripts Library & Framework Link -->
