--- a/views/client/pages/product/detail.view.ejs
+++ b/views/client/pages/product/detail.view.ejs
@@ -80,7 +80,8 @@
                     </span>
                   </div>
                   <span class="content-font product__info-stock mb-1"
-                    ><i class="fas fa-shopping-basket fa-sm mx-1"></i>Còn <%= product.stock %> mặt
+                    ><i class="fas fa-shopping-basket fa-sm mx-1"></i>Còn
+                    <span class="content-font info__stock-number fw-bold"><%= product.stock %></span> mặt
                     hàng</span
                   >
                   <span class="content-font text-success ms-2">trong kho</span>
@@ -114,12 +115,14 @@
 
                 <hr />
 
-                <div class="row mb-4">
+                <div class="product__info-button row mb-4">
                   <div class="col-md-4 col-6 mb-3">
-                    <label class="mb-2 d-block">Số lượng</label>
-                    <div class="input-group mb-3" style="width: 170px">
+                    <label class="product__info-label content-font mb-2 d-block"
+                      ><b>Số lượng</b></label
+                    >
+                    <div class="product__info-box input-group mb-3">
                       <button
-                        class="btn btn-white border border-secondary px-3"
+                        class="product__info-decrease button-icon-secondary"
                         type="button"
                         id="button-addon1"
                         data-mdb-ripple-color="dark"
@@ -127,14 +130,17 @@
                         <i class="fas fa-minus"></i>
                       </button>
                       <input
-                        type="text"
-                        class="form-control text-center border border-secondary"
-                        placeholder="14"
+                        type="number"
+                        class="product__info-quantity form-control text-center border border-secondary"
+                        placeholder="Số lượng..."
+                        value="1"
+                        min="1"
+                        step="1"
                         aria-label="Example text with button addon"
                         aria-describedby="button-addon1"
                       />
                       <button
-                        class="btn btn-white border border-secondary px-3"
+                        class="product__info-increase button-icon-secondary"
                         type="button"
                         id="button-addon2"
                         data-mdb-ripple-color="dark"
@@ -144,11 +150,11 @@
                     </div>
                   </div>
                 </div>
-                <a href="#" class="btn btn-warning shadow-0"> Buy now </a>
-                <a href="#" class="btn btn-primary shadow-0">
+                <a href="#" class="button-primary text-decoration-none"> Buy now </a>
+                <a href="#" class="button-secondary text-decoration-none">
                   <i class="me-1 fa fa-shopping-basket"></i> Add to cart
                 </a>
-                <a href="#" class="btn btn-light border border-secondary py-2 icon-hover px-3">
+                <a href="#" class="button-primary text-decoration-none">
                   <i class="me-1 fa fa-heart fa-lg"></i> Save
                 </a>
               </div>
@@ -165,6 +171,7 @@
     <script src="/client/scripts/toggleHeaderMobile.js"></script>
     <script src="/client/scripts/customInputRange.js"></script>
     <script src="/client/scripts/product/showProductFilter.js"></script>
+    <script src="/client/scripts/product/handleQuantityCart.js"></script>
     <!-- End Scripts File -->
 
     <!-- Scripts Library & Framework Link -->
