--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -190,7 +190,7 @@
               <div class="content-font product__filter-quantity">
                 <select name="quantity" class="filter__quantity-limit">
                   <option disabled selected class="filter__quantity-option">-- Hiển thị --</option>
-                  <option value="4" <% if(productLimit === 4) { %>selected<% } %> class="filter__quantity-option"></option>
+                  <option value="4" <% if(productLimit === 4) { %>selected<% } %> class="filter__quantity-option">4</option>
                   <option value="8" <% if(productLimit === 8) { %>selected<% } %> class="filter__quantity-option">8</option>
                   <option value="12" <% if(productLimit === 12) { %>selected<% } %> class="filter__quantity-option">12</option>
                 </select>
