add cart page client

--- a/views/client/partials/header.view.ejs
+++ b/views/client/partials/header.view.ejs
@@ -44,9 +44,9 @@
 
       <div class="col-lg-4 col-12 header-others">
         <div class="header-others-box mt-2">
-          <div class="header-others-cart">
+          <a href="/cart" class="header-others-cart">
             <i class="bi bi-bag-check-fill"></i>
-          </div>
+          </a>
           <div class="header-others-notice">
             <i class="fa-solid fa-bell"></i>
           </div>
