--- a/views/client/pages/home/index.view.ejs
+++ b/views/client/pages/home/index.view.ejs
@@ -214,7 +214,11 @@
                       <i class="bi bi-star-fill"></i>
                       <% } %>
                     </div>
-                    <i title="add to cart" class="bi bi-bag-check-fill"></i>
+                    <form action="/cart/add/<%= product.id %>" method="POST">
+                      <button type="submit" class="border-0 bg-transparent">
+                        <i title="add to cart" class="bi bi-bag-check-fill"></i>
+                      </button>
+                    </form>
                   </div>
                 </div>
                 <!-- End Card -->
@@ -290,7 +294,11 @@
                       <i class="bi bi-star-fill"></i>
                       <% } %>
                     </div>
-                    <i title="add to cart" class="bi bi-bag-check-fill"></i>
+                    <form action="/cart/add/<%= product.id %>" method="POST">
+                      <button type="submit" class="border-0 bg-transparent">
+                        <i title="add to cart" class="bi bi-bag-check-fill"></i>
+                      </button>
+                    </form>
                   </div>
                 </div>
                 <!-- End Card -->
