--- a/views/client/pages/product/product.view.ejs
+++ b/views/client/pages/product/product.view.ejs
@@ -248,7 +248,9 @@
                         <i class="bi bi-star-fill"></i>
                         <% } %>
                       </div>
-                      <i title="add to cart" class="bi bi-bag-check-fill"></i>
+                      <form action="/cart/add/<%= product.id %>" method="POST">
+                        <button type="submit" class="border-0 bg-transparent"><i title="add to cart" class="bi bi-bag-check-fill"></i></button>
+                      </form>
                     </div>
                   </div>
                 </div>
